--- a/Karan_102316115.ipynb
+++ b/Karan_102316115.ipynb
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,6 +251,31 @@
         "**Assingment 2.1**: WAP to add three numbers and print the result.\n",
         "\n",
         "**Assingment 2.2**: WAP to concatinate three strings and print the result."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(1+2+3)\n",
+        "print(\"a\"+\"b\"+\"c\")"
+      ],
+      "metadata": {
+        "id": "jX1znZfc4Mz1",
+        "outputId": "7c5b97cb-9c22-42c8-86ca-ed72f63756bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "abc\n"
+          ]
+        }
       ]
     },
     {
