--- a/Learn_Python.ipynb
+++ b/Learn_Python.ipynb
@@ -106,11 +106,11 @@
         "print(\"Karan\\n\"*3)"
       ],
       "metadata": {
-        "id": "7zvzJ_mikGYi",
-        "outputId": "f2b051ad-c999-46ea-d2d5-cbb2f797ef44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7zvzJ_mikGYi",
+        "outputId": "f2b051ad-c999-46ea-d2d5-cbb2f797ef44"
       },
       "execution_count": 1,
       "outputs": [
@@ -262,11 +262,11 @@
         "print(a+b+c)"
       ],
       "metadata": {
-        "id": "t2AN1TYzkV9Z",
-        "outputId": "14120781-a376-414a-88c3-ebb1b1de2149",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t2AN1TYzkV9Z",
+        "outputId": "14120781-a376-414a-88c3-ebb1b1de2149"
       },
       "execution_count": 2,
       "outputs": [
@@ -288,11 +288,11 @@
         "print(a+b+c)"
       ],
       "metadata": {
-        "id": "hhD7_KfnkdR8",
-        "outputId": "997a587e-20f7-4a7d-c16c-4bb74577702f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hhD7_KfnkdR8",
+        "outputId": "997a587e-20f7-4a7d-c16c-4bb74577702f"
       },
       "execution_count": 3,
       "outputs": [
@@ -743,6 +743,131 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n=0\n",
+        "print(\"table of 7\")\n",
+        "while(n<10):\n",
+        "    n=n+1\n",
+        "    print(7*n)\n",
+        "\n",
+        "\n",
+        "\n",
+        "n=0\n",
+        "print(\"table of 9\")\n",
+        "while(n<10):\n",
+        "    n=n+1\n",
+        "    print(9*n)\n"
+      ],
+      "metadata": {
+        "id": "hmfJBShDlArH",
+        "outputId": "95e11dee-1d5c-45d5-c85b-cdcb037e8238",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "table of 7\n",
+            "7\n",
+            "14\n",
+            "21\n",
+            "28\n",
+            "35\n",
+            "42\n",
+            "49\n",
+            "56\n",
+            "63\n",
+            "70\n",
+            "table of 9\n",
+            "9\n",
+            "18\n",
+            "27\n",
+            "36\n",
+            "45\n",
+            "54\n",
+            "63\n",
+            "72\n",
+            "81\n",
+            "90\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=0\n",
+        "x=int(input(\"Enter the number\"))\n",
+        "print(\"table of \",x)\n",
+        "while(n<10):\n",
+        "    n=n+1\n",
+        "    print(x*n)\n"
+      ],
+      "metadata": {
+        "id": "rLkuUnNTlC1h",
+        "outputId": "137869cf-4a88-4609-96b2-b29708b3405b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number5\n",
+            "table of  5\n",
+            "5\n",
+            "10\n",
+            "15\n",
+            "20\n",
+            "25\n",
+            "30\n",
+            "35\n",
+            "40\n",
+            "45\n",
+            "50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=int(input(\"Enter the number=\"))\n",
+        "n=0\n",
+        "c=0\n",
+        "while(n!=x):\n",
+        "    n=n+1\n",
+        "    c=c+n\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "4r6MDEkRlI7t",
+        "outputId": "f4efffc1-0e4a-45a5-d891-b79df88f367c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number=6\n",
+            "21\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6eraxEhZCJRU"
@@ -928,6 +1053,100 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "a = int(input())\n",
+        "b = int(input())\n",
+        "c = int(input())\n",
+        "print(max(a, b, c))\n"
+      ],
+      "metadata": {
+        "id": "hmmPw4LRlXmj",
+        "outputId": "bb7cd099-0d3d-4868-eb40-eb9b7eb1a42f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "5\n",
+            "4\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "total = 0\n",
+        "for i in range(1, n+1):\n",
+        "    if i % 7 == 0 and i % 9 == 0:\n",
+        "        total += i\n",
+        "print(total)\n"
+      ],
+      "metadata": {
+        "id": "VHCZkJTylcSN",
+        "outputId": "51d26125-1ab3-45ed-c6d3-5c8adc5d8449",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "total = 0\n",
+        "\n",
+        "for num in range(2, n+1):\n",
+        "    is_prime = True\n",
+        "    for i in range(2, int(num**0.5) + 1):\n",
+        "        if num % i == 0:\n",
+        "            is_prime = False\n",
+        "            break\n",
+        "    if is_prime:\n",
+        "        total += num\n",
+        "\n",
+        "print(total)\n"
+      ],
+      "metadata": {
+        "id": "76iSMvowloIL",
+        "outputId": "975bb68e-b3d6-41f0-db5a-34de459c61f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16\n",
+            "41\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "_dC1CuVnDipZ"
@@ -1072,6 +1291,75 @@
         "**Assingment 6.1:** WAP using function that add all odd numbers from 1 to n, n is given by the user.\n",
         "\n",
         "**Assingment 6.2:** WAP using function that add all prime numbers from 1 to n, n given by the user."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_of_odds(n):\n",
+        "    total = 0\n",
+        "    for i in range(1, n+1, 2):\n",
+        "        total += i\n",
+        "    return total\n",
+        "\n",
+        "n = int(input())\n",
+        "print(sum_of_odds(n))\n"
+      ],
+      "metadata": {
+        "id": "VNUsv8sXlwtq",
+        "outputId": "fcd4ae3b-928b-48a7-ecfc-78565ad0b959",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "16\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_of_primes(n):\n",
+        "    total = 0\n",
+        "    for num in range(2, n+1):\n",
+        "        is_prime = True\n",
+        "        for i in range(2, int(num**0.5) + 1):\n",
+        "            if num % i == 0:\n",
+        "                is_prime = False\n",
+        "                break\n",
+        "        if is_prime:\n",
+        "            total += num\n",
+        "    return total\n",
+        "\n",
+        "n = int(input())\n",
+        "print(sum_of_primes(n))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wL6Zj7h7l13p",
+        "outputId": "7bece58e-2b99-470c-c3af-1788059cede3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "41\n"
+          ]
+        }
       ]
     },
     {
