--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzx4dgu9oPsFG+dyq/XbLu",
+      "authorship_tag": "ABX9TyMLE6hQu6Pn0+V9mEf3VhY+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,413 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "1. Create a List L that is defined as= [10, 20, 30, 40, 50, 60, 70, 80].\n",
+        "i. WAP to add 200 and 300 to L.\n",
+        "ii. WAP to remove 10 and 30 from L.\n",
+        "iii. WAP to sort L in ascending order.\n",
+        "iv. WAP to sort L in descending order."
+      ],
       "metadata": {
-        "id": "s4Go9xPCPEEb"
+        "id": "uuw-L2CXPipz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s4Go9xPCPEEb",
+        "outputId": "45ff3db4-ebcf-49b9-f97f-7c6a0f1c6e02"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30, 40, 50, 60, 70, 80, 200, 300]\n"
+          ]
+        }
+      ],
+      "source": [
+        "L = [10, 20, 30, 40, 50, 60, 70, 80]\n",
+        "L.append(200)\n",
+        "L.append(300)\n",
+        "print(L)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = [10, 20, 30, 40, 50, 60, 70, 80]\n",
+        "L.remove(10)\n",
+        "L.remove(30)\n",
+        "print(L)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ixlHFwffQHfu",
+        "outputId": "658f756b-1f58-448c-d715-84a2da29bb16"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[20, 40, 50, 60, 70, 80]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = [10, 20, 30, 40, 50, 60, 70, 80]\n",
+        "L.sort()\n",
+        "print(L)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E_NG0rZOQU9j",
+        "outputId": "03cec8ad-548a-4d28-cb7e-171ccbeb6b62"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30, 40, 50, 60, 70, 80]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = [10, 20, 30, 40, 50, 60, 70, 80]\n",
+        "L.sort(reverse=True)\n",
+        "print(L)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qrw1opOpQcb3",
+        "outputId": "ad27b726-461f-4724-d02c-8354237d3133"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[80, 70, 60, 50, 40, 30, 20, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a tuple of marks scored as scores = (45, 89.5, 76, 45.4, 89, 92, 58, 45) and\n",
+        "perform the following operations using tuple functions:\n",
+        "i. Identify the highest score and its index in the tuple.\n",
+        "ii. Find the lowest score and count how many times it appears.\n",
+        "iii. Reverse the tuple and return it as a list.\n",
+        "iv. Check if a specific score ‘76’ (input by the user) is present in the tuple and\n",
+        "print its first occurrence index, or a message saying it’s not present."
+      ],
+      "metadata": {
+        "id": "5ywfXeyrSM3M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = (45, 89.5, 76, 45.4, 89, 92, 58, 45)\n",
+        "highest_score = max(scores)\n",
+        "highest_index = scores.index(highest_score)\n",
+        "print(\"Highest score:\", highest_score)\n",
+        "print(\"Index of highest score:\", highest_index)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xOVAyccPSPAy",
+        "outputId": "13ebaa16-c4b9-4ecf-bc3b-9d4540b3dca0"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Highest score: 92\n",
+            "Index of highest score: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = (45, 89.5, 76, 45.4, 89, 92, 58, 45)\n",
+        "lowest_score = min(scores)\n",
+        "lowest_count = scores.count(lowest_score)\n",
+        "print(\"Lowest score:\", lowest_score)\n",
+        "print(\"Count of lowest score:\", lowest_count)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vSS1X-t4SaN-",
+        "outputId": "19e7021b-ccf2-4c2f-a0d8-df8de335432e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lowest score: 45\n",
+            "Count of lowest score: 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = (45, 89.5, 76, 45.4, 89, 92, 58, 45)\n",
+        "reversed_scores = list(scores[::-1])\n",
+        "print(\"Reversed tuple as list:\", reversed_scores)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X7yxOfubSgf7",
+        "outputId": "7211b396-57bd-4c8e-fec0-b923d5f8504a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reversed tuple as list: [45, 58, 92, 89, 45.4, 76, 89.5, 45]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = (45, 89.5, 76, 45.4, 89, 92, 58, 45)\n",
+        "user_score = float(input(\"Enter a score to check if it is present: \"))\n",
+        "if user_score in scores:\n",
+        "    first_occurrence = scores.index(user_score)\n",
+        "    print(f\"Score {user_score} is present at index {first_occurrence}.\")\n",
+        "else:\n",
+        "    print(f\"Score {user_score} is not present in the tuple.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TxpfBs_CSoTp",
+        "outputId": "99b49bdb-0b5c-4cd8-bb1b-6ab36ba1627e"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a score to check if it is present: 45\n",
+            "Score 45.0 is present at index 0.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "WAP to create a list of 100 random numbers between 100 and 900. Count and print\n",
+        "the:\n",
+        "i. All odd numbers\n",
+        "ii. All even numbers\n",
+        "iii. All prime numbers"
+      ],
+      "metadata": {
+        "id": "Tb_vbldHThda"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "import math\n",
+        "\n",
+        "def is_prime(n):\n",
+        "    if n <= 1:\n",
+        "        return False\n",
+        "    for i in range(2, int(math.sqrt(n)) + 1):\n",
+        "        if n % i == 0:\n",
+        "            return False\n",
+        "    return True\n",
+        "\n",
+        "random_numbers = [random.randint(100, 900) for _ in range(100)]\n",
+        "\n",
+        "odd_numbers = [num for num in random_numbers if num % 2 != 0]\n",
+        "even_numbers = [num for num in random_numbers if num % 2 == 0]\n",
+        "prime_numbers = [num for num in random_numbers if is_prime(num)]\n",
+        "\n",
+        "print(f\"Odd numbers count: {len(odd_numbers)}\")\n",
+        "print(f\"Even numbers count: {len(even_numbers)}\")\n",
+        "print(f\"Prime numbers count: {len(prime_numbers)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0iz9joVsUNJ_",
+        "outputId": "cac46f88-d66a-44c4-c597-bdf829cbe4f6"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Odd numbers count: 47\n",
+            "Even numbers count: 53\n",
+            "Prime numbers count: 19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Consider the following two sets, A and B, represenƟng scores of two teams in mulƟple\n",
+        "matches. A = {34, 56, 78, 90} and B = {78, 45, 90, 23}\n",
+        "WAP to perform the following operaƟons using set funcƟons:\n",
+        "i. Find the unique scores achieved by both teams (union of sets).\n",
+        "ii. IdenƟfy the scores that are common to both teams (intersecƟon of sets).\n",
+        "iii. Find the scores that are exclusive to each team (symmetric difference).\n",
+        "iv. Check if the scores of team A are a subset of team B, and if team B's scores are\n",
+        "a superset of team A.\n",
+        "v. Remove a specific score X (input by the user) from set A if it exists. If not, print\n",
+        "a message saying it is not present."
+      ],
+      "metadata": {
+        "id": "S3LkGkfkfxkg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = {34, 56, 78, 90}\n",
+        "B = {78, 45, 90, 23}\n",
+        "\n",
+        "union_scores = A.union(B)\n",
+        "print(\"Unique scores (Union of sets):\", union_scores)\n",
+        "\n",
+        "common_scores = A.intersection(B)\n",
+        "print(\"Common scores (Intersection of sets):\", common_scores)\n",
+        "\n",
+        "exclusive_scores = A.symmetric_difference(B)\n",
+        "print(\"Exclusive scores (Symmetric Difference):\", exclusive_scores)\n",
+        "\n",
+        "is_A_subset_B = A.issubset(B)\n",
+        "is_B_superset_A = B.issuperset(A)\n",
+        "print(\"Is team A's scores a subset of team B?\", is_A_subset_B)\n",
+        "print(\"Is team B's scores a superset of team A?\", is_B_superset_A)\n",
+        "\n",
+        "X = int(input(\"Enter a score to remove from team A: \"))\n",
+        "if X in A:\n",
+        "    A.remove(X)\n",
+        "    print(f\"Score {X} removed from team A.\")\n",
+        "else:\n",
+        "    print(f\"Score {X} is not present in team A.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TMjD65Yxf4LZ",
+        "outputId": "e525be61-3d4e-4ca9-d593-b5aec4a4a917"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unique scores (Union of sets): {34, 45, 78, 23, 56, 90}\n",
+            "Common scores (Intersection of sets): {90, 78}\n",
+            "Exclusive scores (Symmetric Difference): {34, 45, 23, 56}\n",
+            "Is team A's scores a subset of team B? False\n",
+            "Is team B's scores a superset of team A? False\n",
+            "Enter a score to remove from team A: 45\n",
+            "Score 45 is not present in team A.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a program to rename a key city to a locaƟon in the following dicƟonary."
+      ],
+      "metadata": {
+        "id": "aPsXj_d8g_sR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_dict = {\n",
+        "    \"name\": \"Kelly\",\n",
+        "    \"age\": 25,\n",
+        "    \"salary\": 8000,\n",
+        "    \"city\": \"New york\"\n",
+        "}\n",
+        "\n",
+        "# Rename key 'city' to 'location'\n",
+        "sample_dict[\"location\"] = sample_dict.pop(\"city\")\n",
+        "\n",
+        "print(sample_dict)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dbekHIbmhFfT",
+        "outputId": "27cadf16-d4a4-4be4-e9b7-d2908ce185bf"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'Kelly', 'age': 25, 'salary': 8000, 'location': 'New york'}\n"
+          ]
+        }
+      ]
     }
   ]
 }
